[gd_scene load_steps=15 format=3 uid="uid://prh35jb6tjtd"]

[ext_resource type="PackedScene" uid="uid://16iu10wxub40" path="res://addons/gdquest_sophia/model/sophia.glb" id="1_e4pev"]
[ext_resource type="Script" uid="uid://b03canb6el077" path="res://addons/gdquest_sophia/sophia_skin.gd" id="1_obcib"]
[ext_resource type="Material" uid="uid://dye01l0ct4fby" path="res://addons/gdquest_sophia/model/materials/eye_mat_override.tres" id="4_mms51"]
[ext_resource type="Script" uid="uid://cu52yli6eidjn" path="res://resources/scripts/camera.gd" id="4_ucn8o"]
[ext_resource type="Texture2D" uid="uid://cj2rq3ejbakef" path="res://resources/Interface/moedaGif.gif" id="5_m61dc"]
[ext_resource type="Script" uid="uid://dwlewse6xp261" path="res://resources/scripts/interface.gd" id="5_w7ctv"]
[ext_resource type="FontFile" uid="uid://b51pl0hut3qm4" path="res://resources/Interface/Daydream.ttf" id="6_vw4pm"]
[ext_resource type="Texture2D" uid="uid://0qw8mt0sfhnx" path="res://resources/Interface/pixel-heart.gif" id="7_ir40m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ucn8o"]
radius = 0.39596
height = 1.58621

[sub_resource type="BoxShape3D" id="BoxShape3D_ucn8o"]
size = Vector3(0.513907, 0.180123, 0.498586)

[sub_resource type="LabelSettings" id="LabelSettings_vw4pm"]
font = ExtResource("6_vw4pm")
font_size = 30
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.333333)

[sub_resource type="Gradient" id="Gradient_ir40m"]
colors = PackedColorArray(0.152941, 0.152941, 0.152941, 0.584314, 0.243137, 0.243137, 0.243137, 0.584314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w7ctv"]
gradient = SubResource("Gradient_ir40m")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s01ky"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0)

[node name="SophiaSkin" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_obcib")

[node name="mesh" parent="." instance=ExtResource("1_e4pev")]

[node name="Skeleton3D" parent="mesh/rig" index="0"]
bones/0/position = Vector3(-0.0251348, 0.49628, -0.00867664)
bones/0/rotation = Quaternion(0.126528, -0.0582381, -0.00922971, 0.990209)
bones/1/rotation = Quaternion(-0.0644765, 2.41677e-09, -4.12252e-09, 0.997919)
bones/2/rotation = Quaternion(-0.0774622, -0.00436192, 6.0884e-05, 0.996986)
bones/3/rotation = Quaternion(-0.00166321, -0.0130642, -0.000299008, 0.999913)
bones/4/rotation = Quaternion(0.147768, 0.008658, -0.000983938, 0.988984)
bones/5/rotation = Quaternion(-0.114648, -1.05998e-09, 1.4507e-08, 0.993406)
bones/6/rotation = Quaternion(-0.0158414, 0.00871235, -0.000138086, 0.999837)
bones/7/rotation = Quaternion(0.991815, 0.114432, 0.00798926, 0.0560755)
bones/8/rotation = Quaternion(0.991796, -0.114601, 0.00499982, -0.0564207)
bones/9/rotation = Quaternion(0.841972, -0.0381857, 0.0243823, 0.537615)
bones/10/rotation = Quaternion(0.40922, 0.0226497, -0.0504092, 0.910761)
bones/11/rotation = Quaternion(0.821889, 0.10746, -0.186609, 0.527378)
bones/12/rotation = Quaternion(0.409854, 0.0110344, -0.0475161, 0.910846)
bones/13/rotation = Quaternion(0.808788, -0.181416, 0.233581, 0.508322)
bones/14/rotation = Quaternion(0.408568, 0.034264, -0.0532941, 0.910526)
bones/15/rotation = Quaternion(-0.335082, -0.134719, -0.502139, 0.785766)
bones/16/rotation = Quaternion(3.77937e-08, 6.68168e-08, 0.067177, 0.997741)
bones/17/rotation = Quaternion(-0.358095, 0.0468741, 0.290255, 0.886185)
bones/18/rotation = Quaternion(-3.04947e-08, -8.09872e-08, 0.0671767, 0.997741)
bones/19/rotation = Quaternion(-0.403436, -0.0807135, -0.143649, 0.90005)
bones/20/rotation = Quaternion(-1.84186e-07, 1.79538e-08, 0.0671769, 0.997741)
bones/21/rotation = Quaternion(-0.410817, -0.0224758, -0.0854109, 0.90743)
bones/22/rotation = Quaternion(-1.83049e-07, 4.71547e-08, 0.0671769, 0.997741)
bones/23/rotation = Quaternion(-0.579757, -0.382617, -0.396489, 0.600235)
bones/24/rotation = Quaternion(-0.304595, 0.650626, -0.416323, 0.5573)
bones/25/position = Vector3(-2.84344e-08, 0.0693518, 7.45058e-09)
bones/25/rotation = Quaternion(8.11935e-08, 0.0104573, -2.32561e-08, 0.999945)
bones/26/position = Vector3(-3.30328e-08, 0.0693518, -7.25292e-09)
bones/26/rotation = Quaternion(0.168838, 0.0104573, -0.00179135, 0.985587)
bones/27/position = Vector3(-1.00059e-07, 0.0641195, -5.12226e-09)
bones/27/rotation = Quaternion(-5.6769e-08, -0.00179288, 5.72353e-08, 0.999998)
bones/28/position = Vector3(2.54637e-08, 0.0641197, 1.70021e-08)
bones/28/rotation = Quaternion(-0.0713826, -0.0016585, 0.0518695, 0.996098)
bones/30/rotation = Quaternion(0.586205, -0.0728153, -0.158498, 0.791164)
bones/31/rotation = Quaternion(0.422653, -0.000300065, -0.00100193, 0.906291)
bones/32/rotation = Quaternion(0.424779, 0.000651514, 0.00163282, 0.905296)
bones/33/rotation = Quaternion(-0.0432788, 0.822374, 0.418861, 0.382602)
bones/34/rotation = Quaternion(0.605953, -0.0519355, 0.0526438, 0.792056)
bones/35/rotation = Quaternion(0.490047, -0.012869, -0.0253105, 0.871234)
bones/37/rotation = Quaternion(0.594404, -0.0768252, -0.0772993, 0.796747)
bones/38/rotation = Quaternion(0.425027, 0.000226274, 0.000737527, 0.90518)
bones/39/rotation = Quaternion(0.424791, -0.000484585, -0.00120235, 0.905291)
bones/41/rotation = Quaternion(0.604183, 0.0209748, -0.0202136, 0.796313)
bones/42/rotation = Quaternion(0.496983, -7.6202e-05, -0.000187088, 0.86776)
bones/43/rotation = Quaternion(0.498019, 0.000152893, 0.000304259, 0.867166)
bones/45/rotation = Quaternion(0.608247, 0.0350251, 0.0523038, 0.791248)
bones/46/rotation = Quaternion(0.510495, 1.10653e-05, 4.87684e-05, 0.859881)
bones/47/rotation = Quaternion(0.514301, -3.90808e-05, -7.17982e-05, 0.85761)
bones/49/rotation = Quaternion(-0.239796, -0.63685, 0.481038, 0.552741)
bones/50/position = Vector3(6.54545e-08, 0.0693517, 1.11759e-08)
bones/50/rotation = Quaternion(2.78952e-08, 0.0102703, -5.96754e-08, 0.999947)
bones/51/position = Vector3(6.39701e-08, 0.0693518, 2.12806e-08)
bones/51/rotation = Quaternion(0.308342, 0.0102703, -0.00332902, 0.951214)
bones/52/position = Vector3(3.46918e-08, 0.0641197, -9.45292e-08)
bones/52/rotation = Quaternion(-4.19513e-08, -0.00179237, -8.57229e-08, 0.999998)
bones/53/position = Vector3(4.31197e-08, 0.0641198, -9.50838e-08)
bones/53/rotation = Quaternion(0.0662674, -0.0019268, -0.0518418, 0.996452)
bones/55/position = Vector3(-0.00788145, 0.126777, 0.022745)
bones/55/rotation = Quaternion(0.634935, 0.0809939, 0.129391, 0.757335)
bones/56/rotation = Quaternion(0.422333, 0.037719, -0.0164492, 0.905506)
bones/57/rotation = Quaternion(0.424778, -0.000652886, -0.00163169, 0.905296)
bones/58/rotation = Quaternion(0.0432787, 0.822373, 0.418861, -0.382602)
bones/59/rotation = Quaternion(0.605953, 0.0519355, -0.0526439, 0.792055)
bones/60/rotation = Quaternion(0.490047, 0.012869, 0.0253107, 0.871234)
bones/62/position = Vector3(-0.00561923, 0.126171, 0.0233237)
bones/62/rotation = Quaternion(0.642486, 0.0803638, 0.0528975, 0.760233)
bones/63/rotation = Quaternion(0.424663, 0.0356998, -0.0176063, 0.904476)
bones/64/rotation = Quaternion(0.424791, 0.000484688, 0.00120234, 0.905291)
bones/66/position = Vector3(-0.00836084, 0.127142, 0.0226955)
bones/66/rotation = Quaternion(0.653346, -0.0206434, 0.00129776, 0.756777)
bones/67/rotation = Quaternion(0.496619, 0.0336209, -0.0190247, 0.867109)
bones/68/rotation = Quaternion(0.498018, -0.000151753, -0.000304719, 0.867167)
bones/70/position = Vector3(-0.00570161, 0.122795, 0.022938)
bones/70/rotation = Quaternion(0.657362, -0.0389285, -0.0650824, 0.749749)
bones/71/rotation = Quaternion(0.51019, 0.0296037, -0.0176302, 0.859371)
bones/72/rotation = Quaternion(0.514301, 3.88323e-05, 7.19582e-05, 0.85761)
bones/74/rotation = Quaternion(0.782333, 0.248616, -0.171126, 0.54485)
bones/75/rotation = Quaternion(0.782333, -0.248616, 0.171126, 0.54485)
bones/76/rotation = Quaternion(0.985966, 2.84497e-08, -1.60425e-08, -0.166949)
bones/77/rotation = Quaternion(-0.0306789, 1.95752e-08, 9.25838e-10, 0.999529)
bones/78/rotation = Quaternion(-0.0301015, -9.41682e-09, 5.13173e-09, 0.999547)
bones/81/rotation = Quaternion(0.955773, 0.162387, -0.0642835, 0.236636)
bones/82/position = Vector3(4.02629e-09, 0.0942519, -2.73391e-08)
bones/82/rotation = Quaternion(-1.10592e-08, -0.0491366, -2.07287e-08, 0.998792)
bones/83/position = Vector3(1.58899e-08, 0.094252, 1.33295e-08)
bones/83/rotation = Quaternion(0.309504, -0.0491362, 0.0160171, 0.949493)
bones/84/position = Vector3(1.7517e-09, 0.0925612, 1.02773e-08)
bones/84/rotation = Quaternion(1.12543e-07, -0.0695075, -6.11078e-08, 0.997581)
bones/85/position = Vector3(1.93904e-08, 0.0925611, -2.20688e-08)
bones/85/rotation = Quaternion(-0.534489, -0.0345795, 0.135848, 0.833469)
bones/86/position = Vector3(-2.67091e-08, 0.224084, 3.77875e-08)
bones/86/rotation = Quaternion(3.62629e-05, 0.935351, -0.35372, -1.30443e-05)
bones/87/rotation = Quaternion(0.97615, -0.0433131, 0.0452098, 0.207874)
bones/88/position = Vector3(-1.59564e-08, 0.0947332, 5.93381e-10)
bones/88/rotation = Quaternion(-3.11856e-08, 0.0621236, 4.45563e-08, 0.998069)
bones/89/position = Vector3(-2.43564e-08, 0.0947333, 2.32829e-09)
bones/89/rotation = Quaternion(0.207203, 0.0621232, -0.0131856, 0.976234)
bones/90/position = Vector3(1.07835e-08, 0.0930518, -1.30186e-08)
bones/90/rotation = Quaternion(-1.60977e-09, 0.00024008, 1.19864e-08, 1)
bones/91/position = Vector3(-3.91719e-09, 0.0930518, 1.02204e-09)
bones/91/rotation = Quaternion(-0.547551, -0.034745, -0.0538427, 0.834315)
bones/92/position = Vector3(-1.14476e-08, 0.224088, 3.48135e-08)
bones/92/rotation = Quaternion(-1.2239e-05, 0.950423, -0.31096, 3.30425e-06)

[node name="Sophia" parent="mesh/rig/Skeleton3D" index="0"]
surface_material_override/1 = ExtResource("4_mms51")
surface_material_override/2 = ExtResource("4_mms51")

[node name="BlinkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true
autostart = true

[node name="ClosedEyesTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true
autostart = true

[node name="camera" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.740245, 0)
script = ExtResource("4_ucn8o")

[node name="horizontal" type="Node3D" parent="camera"]

[node name="vertical" type="Node3D" parent="camera/horizontal"]

[node name="Pivot" type="SpringArm3D" parent="camera/horizontal/vertical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.791914, 0)
collision_mask = 128
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="camera/horizontal/vertical/Pivot"]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 5.00069)
current = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.792372, 0)
shape = SubResource("CapsuleShape3D_ucn8o")

[node name="damage_attack" type="Area3D" parent="."]
collision_layer = 136

[node name="CollisionShape3D" type="CollisionShape3D" parent="damage_attack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00787741, 0.0783405, 0.050618)
shape = SubResource("BoxShape3D_ucn8o")

[node name="Interface" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_w7ctv")

[node name="CoinContainer" type="HBoxContainer" parent="Interface"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.095
offset_top = 20.0
offset_right = -46.095
offset_bottom = 90.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Interface/CoinContainer"]
layout_mode = 2
texture = ExtResource("5_m61dc")
expand_mode = 3

[node name="coinAmount" type="Label" parent="Interface/CoinContainer"]
layout_mode = 2
text = "5"
label_settings = SubResource("LabelSettings_vw4pm")

[node name="HealthContainer" type="HBoxContainer" parent="Interface"]
layout_mode = 1
offset_left = 44.0
offset_top = 21.0
offset_right = 146.0
offset_bottom = 91.0
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="Interface/HealthContainer"]
layout_mode = 2
texture = ExtResource("7_ir40m")
expand_mode = 3

[node name="healthAmount" type="Label" parent="Interface/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "5"
label_settings = SubResource("LabelSettings_vw4pm")

[node name="telaDerrota" type="TextureRect" parent="Interface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_w7ctv")

[node name="btnContainer" type="VBoxContainer" parent="Interface/telaDerrota"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="btnRecomecar" type="Button" parent="Interface/telaDerrota/btnContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.990481, 1, 0.753716, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_vw4pm")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_s01ky")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s01ky")
theme_override_styles/normal = SubResource("StyleBoxFlat_s01ky")
text = "recomecar"

[node name="btnMenu" type="Button" parent="Interface/telaDerrota/btnContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.990481, 1, 0.753716, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_vw4pm")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_s01ky")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s01ky")
theme_override_styles/normal = SubResource("StyleBoxFlat_s01ky")
text = "voltar ao menu"

[connection signal="body_entered" from="damage_attack" to="." method="_on_damage_attack_body_entered"]
[connection signal="pressed" from="Interface/telaDerrota/btnContainer/btnRecomecar" to="Interface" method="_on_btn_recomecar_pressed"]
[connection signal="pressed" from="Interface/telaDerrota/btnContainer/btnMenu" to="Interface" method="_on_btn_menu_pressed"]

[editable path="mesh"]
